2007-12-19  Stefan Jahn  <stefan@lkcc.org>

	* hicumL2V2p22.va, hicumL2V2p11.va: Avoiding singular matrices due
	to V(br) <+ 0.0 statements.  Converted to I(br) <+ V(br)/1e-6
	statements which is a tiny resistor instead of a real short.

	* qucsVersion.xml: 'case' now works for both real and integer
	arguments. Statements like 'case (0) a: b=1; endcase' are now also
	correctly translated.  TODO: String comparisons.

2007-12-18  Stefan Jahn  <stefan@lkcc.org>

	* hicumL2V2p22.va: Added new device: HICUM L2 v2.22 model.

	* qucsVersion.xml: Loads of changes enabling the code to translate
	ddx() statements.  Also improved 'case' handling (variable
	assignment detection inside 'caseitem' code).  ADMS version 2.2.8
	is now required (currently in SVN only).

2007-12-13  Stefan Jahn  <stefan@lkcc.org>

	* mod_amp.va: Added new verilog device: Modular OpAmp.  Thanks to
	Mike Brinson!

2007-12-11  Stefan Jahn  <stefan@lkcc.org>

	* qucsVersion.xml: Implemented $strobe() and $finish() corretly
	now.  Simple (only for numeric case items) but working 'case'
	implementation added.

2007-09-16  Stefan Jahn  <stefan@lkcc.org>

	* analogfunction.xml: Initializing local variables in analog
	functions.

2007-04-29  Stefan Jahn  <stefan@lkcc.org>

	* hicumL2V2p11.va: Applied some changes which makes the file
	minimally differ from the original source file.

	* qucsMODULEcore.xml: Updated all admst-scripts due to changed CR
	handling of new adms-2.2.5 release.

	* qucsVersion.xml, analogfunction.xml: Fixed definition of
	limexp() and its derivative.  Also fixed $vt() translation.

2007-04-07  Stefan Jahn  <stefan@lkcc.org>

	* verilog/qucsMODULEdefs.xml: Fixed bug in (-inf:inf) parameter
	range handling.

	* verilog/qucsMODULEcore.xml: Moved Verilog evaluation into a
	initVerilog() and calcVerilog() function.

2007-04-05  Stefan Jahn  <stefan@lkcc.org>

	* verilog/qucsVersion.xml: Some more cleanups.  Also fixed
	a bug for analog function calls.  Thanks to Laurent.
