@@ -1,3 +1,8 @@
+2007-12-20  Stefan Jahn  <stefan@lkcc.org>
+
+	* qucsMODULEgui.xml: Added some code for mosfets.  Still something
+	to do (symbol).
+
 2007-12-19  Stefan Jahn  <stefan@lkcc.org>
 
 	* hicumL2V2p22.va, hicumL2V2p11.va: Avoiding singular matrices due
